[gd_scene load_steps=3 format=3 uid="uid://d2f0n6ix2228b"]

[ext_resource type="Script" uid="uid://noqyfvatypi4" path="res://Scripts/UI/Map/BuyMenuControl.gd" id="1_el5wk"]
[ext_resource type="PackedScene" uid="uid://cm734gkrhdi5i" path="res://Scenes/ui/toplevel/food_stock_chart.tscn" id="3_frrmy"]

[node name="StockMenuControl" type="Control" node_paths=PackedStringArray("food_component_chart")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_el5wk")
food_component_chart = {
0: NodePath("VBoxContainer/FoodStockChart"),
1: NodePath("VBoxContainer/FoodStockChart2"),
2: NodePath("VBoxContainer/FoodStockChart3"),
3: NodePath("VBoxContainer/FoodStockChart4")
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FoodStockChart" parent="VBoxContainer" instance=ExtResource("3_frrmy")]
layout_mode = 2

[node name="FoodStockChart2" parent="VBoxContainer" instance=ExtResource("3_frrmy")]
layout_mode = 2

[node name="FoodStockChart3" parent="VBoxContainer" instance=ExtResource("3_frrmy")]
layout_mode = 2

[node name="FoodStockChart4" parent="VBoxContainer" instance=ExtResource("3_frrmy")]
layout_mode = 2
